# ResearchLabManager

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: sqlite-to-json.mjs
src/: App.vue  env.d.ts  index.css  supabase.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AppLogo.vue  PieChart.vue  Sidebar.vue  StatusBadge.vue
src/db/: database.ts  kanbanQueries.ts  meetingQueries.ts  phdQueries.ts  projectQueries.ts  realtime.ts  teamQueries.ts
src/pages/: BudgetEstimation.vue  Dashboard.vue  Kanban.vue  Login.vue  MeetingNotes.vue  PhdProgress.vue  Projects.vue  Publications.vue  Settings.vue  Team.vue
src/router/: index.ts
src/stores/: authStore.ts  kanbanStore.ts  meetingStore.ts  phdStore.ts  projectStore.ts  publicationStore.ts  teamStore.ts
src/types/: index.ts
src/utils/: migrate.ts
supabase/: schema.sql
