[package]
name = "research-lab-manager"
version = "0.1.0"
description = "Research Lab Manager"
authors = ["Klaas Bombeke"]
edition = "2021"

[lib]
name = "research_lab_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "gzip"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
